--- a/estilos.css
+++ b/estilos.css
@@ -4,6 +4,6 @@
 
 #grilla-catalogo  .card {
   margin-right: 3rem;
-  border: 1px solid gray;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   padding: 3rem;
 }
