--- a/estilos.css
+++ b/estilos.css
@@ -1,9 +1,3 @@
-main {
-  background-image: url(img/wickedbackground.svg);
-  background-size: cover;
-  height: 80vh;
-}
-
 #grilla-catalogo {
   margin-top: 2rem;
 }
@@ -13,13 +7,13 @@ main {
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   padding: 3rem;
 }
-
+/* 
 .imageBackground {
   background-image: url(img/Captura14-247x247.jpg);
   background-size: cover;
   height: 100%;
 
-}
+} */
 
 .seccionLogin {
   height: 600px;
